--- a/page_vitoria.html
+++ b/page_vitoria.html
@@ -39,10 +39,7 @@
         <i>Que tal outra partida? </i>
       </h3>
       <div class="botoes-continuar">
-        <a
-          href="jogodaforca.html"
-          type="button"
-          class="btn btn-secondary text-center"
+        <a href="index.html" type="button" class="btn btn-secondary text-center"
           >Quero!</a
         >
         <a
