--- a/page_derrota.html
+++ b/page_derrota.html
@@ -45,10 +45,7 @@
         <i>Que tal jogar outra partida? </i>
       </h3>
       <div class="botoes-continuar">
-        <a
-          href="jogodaforca.html"
-          type="button"
-          class="btn btn-secondary text-center"
+        <a href="index.html" type="button" class="btn btn-secondary text-center"
           >Quero!</a
         >
         <a
