--- a/page_vitoria.html
+++ b/page_vitoria.html
@@ -34,7 +34,7 @@
         <i class="bi bi-emoji-sunglasses"> </i>
         <i class="bi bi-hand-thumbs-up"></i>
       </div>
-      <h2 class="text-center" id="titulo-vitoria">Parábens! Você venceu!</h2>
+      <h2 class="text-center" id="titulo-vitoria">Parabéns! Você venceu!</h2>
       <h3 class="text-center" id="descricao-vitoria">
         <i>Que tal outra partida? </i>
       </h3>
