correcao bug imagens

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -32,9 +33,7 @@
       </h1>
     </header>
     <section id="grupo-imagem" class="container">
-      <span class="img-fluid" id="desenho"
-        ><img class="img-fluid" src="img/forca.png"
-      /></span>
+      <img id="figura" class="img-fluid" src="img/forca.png" />
       <div id="tabuleiro"></div>
     </section>
     <section class="container" id="grupoletras">
